# pycpp-template

./: .gitignore  CMakeLists.txt  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
examples/: demo.py
src/pycpp_template/: __init__.py  _core.cpp  _core.pyi  math_ops.cpp  math_ops.hpp
tests/: test_accumulator.py  test_math_ops.py
